# grooveanim

./: Cargo.toml  README  weirdgrv.json
src/: chord.rs  drum.rs  graphics.rs  gui.rs  main.rs  midi.rs  setup.rs  text.rs  win.rs
