[package]
name = "grooveanim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.7.2"
image = "0.24.5"
midi-msg = "0.4.0"
midir = "0.9.1"
minifb = "0.24.0"
serde = { version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
unicode-width = "0.1.10"
